WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140425
[Win] Layout Test fast/css/crash-on-custom-cursor-when-loading.html is failing
https://bugs.webkit.org/show_bug.cgi?id=140425
Summary
[Win] Layout Test fast/css/crash-on-custom-cursor-when-loading.html is failing
Brent Fulgham
Reported
2015-01-13 20:27:41 PST
The following layout test is failing on Windows. fast/css/crash-on-custom-cursor-when-loading.html Probable cause: Windows is refusing to create a DIB for the 'empty' icon during the initial load phase. This is returning a null value, which is then used in later API calls that assert that the arguments are non-null. Solution is: 1. If the DIB cannot be created by the operating system based on the icon description, return a nullptr. 2. If the 'createSharedCursor' call returns nullptr, fall back to the default icon case so that we have something that can be used during early layout until the load finishes.
Attachments
Patch
(2.64 KB, patch)
2015-01-13 20:30 PST
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2015-01-13 20:30:07 PST
Created
attachment 244574
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-14 10:25:44 PST
Comment on
attachment 244574
[details]
Patch Clearing flags on attachment: 244574 Committed
r178424
: <
http://trac.webkit.org/changeset/178424
>
WebKit Commit Bot
Comment 3
2015-01-14 10:25:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug