[Win] Layout Test fast/css/crash-on-custom-cursor-when-loading.html is failing https://bugs.webkit.org/show_bug.cgi?id=140425

Reviewed by Anders Carlsson.

* platform/win/CursorWin.cpp:
(WebCore::createSharedCursor): Return nullptr when operating system
cannot support the requested icon specification.
(WebCore::Cursor::ensurePlatformCursor): Check for 'createSharedCursor'
returning nullptr, and fall back to the default icon construction.


Canonical link: https://commits.webkit.org/158429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178424 268f45cc-cd09-0410-ab3c-d52691b4dbfc